ascent_macro_tests/tests/macros/pass/empty_ascent_run.rs
//! Empty immediately-executed program

use ascent::ascent_run;

fn main() {
   let _ = ascent_run! {};
}
